--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.16.0",
     "giphy-api": "^1.2.7",
     "http-errors": "~1.6.2",
-    "morgan": "~1.0.0",
+    "morgan": "^1.10.0",
     "redis-client": "file:app/lib/redis-client",
     "server-module": "file:app/lib/server-module",
     "view-renderer": "file:app/lib/view-renderer"
@@ -22,7 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "debug": "~2.6.9",
     "eslint": "^4.19.1",
-    "jest": "^22.4.3",
+    "jest": "^26.6.1",
     "nodemon": "^1.18.10"
   }
 }
