--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node init.js",
-    "test": "jest",
+    "test": "jest --color=true",
     "lint": "eslint ."
   },
   "dependencies": {
