--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "dateformat": "^3.0.3",
     "electrolyte": "^0.5.0",
     "express": "~4.16.0",
     "giphy-api": "^1.2.7",
